I corrected contrast errors and program runs as expected

--- a/chamber/styles/directory-larger.css
+++ b/chamber/styles/directory-larger.css
@@ -66,34 +66,34 @@
         gap: 5px;
         margin-left: 30px;
         margin-right: 30px;
-    
     }
     
     .list {
         display: flex;
         flex-direction: column;
-
-        .business-address{
-            display: block;
-        }
-        .business{
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-        }
-        .business-header h3{
-            font-size: 1.2rem;
-            font-weight: bold;
-        }
-        .business p{
-            font-size: 1rem;
-        }
     }
 
+    .list .business-address{
+        display: block;
+    }
+
+    .list .business{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    .list .business-header h3{
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+    .list .business p{
+        font-size: 1rem;
+    }
 
     footer{
         display: grid;
         grid-template-columns: 1.1fr 0.7fr 1fr;
         text-align: left;
-
     }
 }
 
